--- a/Resources/public/js/app/templates/actions/automation-actions-template.ejs
+++ b/Resources/public/js/app/templates/actions/automation-actions-template.ejs
@@ -4,27 +4,27 @@
 <% var property = typeof property !== 'undefined' && property; %>
 <% var value = typeof value !== 'undefined' && value; value = value ? value : ''; %>
 <div class="controls">
-    <strong>
+    <strong class="value">
         <%= config.actions[type].label %>
     </strong>
     <% if(type == 'update_property'){ %>
-        <span>Of:</span>
-        <strong><%= entities[entity].label %></strong>
+        <span class="label">Of:</span>
+        <label class="value"><%= entities[entity].label %></label>
         <% if(properties){ %>
-        <span>Set: </span>
-        <strong><%= properties[property].label %></strong>
+        <span class="label">Set: </span>
+        <strong class="value"><%= properties[property].label %></strong>
         <% } %>
         <% if(property){ %>
-            <span>To: </span>
+            <span class="label">To: </span>
             <% if(properties[property].type == 'string'){ %>
-                <strong><%= value %>" /></strong>
+                <strong class="value"><%= value %>" /></strong>
             <% } else if (properties[property].frontend_options){ %>
-                <strong><%= properties[property].frontend_options[value] %></strong>
+                <strong class="value"><%= properties[property].frontend_options[value] %></strong>
             <% } %>
         <% } %>
     <% } %>
     <% if(type == 'notify_by_email'){ %>
-        <span>To: </span>
+        <span class="label">To: </span>
         <input type="text" name="actions[value]" data-attr="value" value="<%= value %>" />
     <% } %>
 </div>
