fix delete action

--- a/Resources/views/Automation/view.html.twig
+++ b/Resources/views/Automation/view.html.twig
@@ -28,8 +28,8 @@
             'aCss': 'no-hash remove-button',
             'dataId': entity.id,
             'id': 'btn-remove-account',
-            'dataMessage': 'diamante.user.messages.delete.query'|trans,
-            'successMessage': 'diamante.user.messages.delete.success'|trans,
+            'dataMessage': 'diamante.automation.rule.messages.delete.query'|trans,
+            'successMessage': 'diamante.automation.rule.messages.delete.success'|trans,
             'title': 'Delete Rule'|trans,
             'label': 'Delete'|trans
         })
