--- a/Resources/views/Entity/Notification/notification.html.twig
+++ b/Resources/views/Entity/Notification/notification.html.twig
@@ -23,19 +23,24 @@
                     {{ header|trans }} by {{ user }}
                   </h1>
 
-                    {% if changes %}
+                    {% if changes is defined %}
                         <table cellspacing="0" cellpadding="0" style="margin: 0; padding: 0;">
                             {% for key, value in changes %}
+                                {% set old = attribute(value, 'old') %}
+                                {% set new = attribute(value, 'new') %}
+
+                                {% if new is not null %}
                                 <tr>
-                                    <td style="color: #A09F9F; font-size: 14px; font-weight: 200; line-height: 18px; margin: 0; padding: 5px 15px 0 0; white-space: nowrap; vertical-align: top;" valign="top">{{ value.getFieldName }}</td>
+                                    <td style="color: #A09F9F; font-size: 14px; font-weight: 200; line-height: 18px; margin: 0; padding: 5px 15px 0 0; white-space: nowrap; vertical-align: top;" valign="top">{{ key }}</td>
                                     <td style="font-size: 14px; font-weight: 200; line-height: 18px; margin: 0; padding: 5px 15px 0 0; vertical-align: top;" valign="top">
-                                        {% if value.getOldValue != '' %}
-                                            <del>{{ value.getOldValue|striptags }}</del><br />{{ value.getNewValue|striptags }}
+                                        {% if old is not null %}
+                                            <del>{{ old|striptags }}</del><br />{{ new|striptags }}
                                         {% else %}
-                                            {{ value.getNewValue|striptags }}
+                                            {{ new|striptags }}
                                         {% endif %}
                                     </td>
                                 </tr>
+                                {% endif %}
                             {% endfor %}
                         </table>
                     {% endif %}
@@ -45,7 +50,7 @@
                         DiamanteDesk
                     </div>
 
-                    {% if attachments %}
+                    {% if attachments is defined %}
                         <h4 style="font-size: 16px; font-weight: 400; margin: 15px 0;">Attachments:</h4>
                         {% for key, value in attachments %}
                             <p style="font-size: 14px; font-weight: 200; line-height: 20px; margin: 0; padding: 0;">{{ value }}</p>
