--- a/Resources/views/Entity/Notification/notification.txt.twig
+++ b/Resources/views/Entity/Notification/notification.txt.twig
@@ -2,11 +2,13 @@
 
 {{ header|trans }} by {{ user }}
 
-{% for key, value in changes %}
-   - {{ key }}: {{ value }}
-{% endfor %}
+{% if changes is defined %}
+    {% for key, value in changes %}
+        - {{ key }}: {{ attribute(value, 'new') }}
+    {% endfor %}
+{% endif %}
 
-{% if attachments %}
+{% if attachments is defined %}
     Attachments:
     {% for key, value in attachments %}
         - {{ value }}
