--- a/Resources/public/css/less/main.less
+++ b/Resources/public/css/less/main.less
@@ -34,9 +34,15 @@
   > div {
     .clearfix();
   }
-  select, input {
+  .control-item {
+    display: inline-block;
     width: 20%;
-    vertical-align: middle;
+    vertical-align: top;
+  }
+  input {
+    width: 100%;
+    height: 30px;
+    box-sizing: border-box;
   }
   .select2-container {
     width: 20%;
@@ -46,6 +52,9 @@
     span {
       width: 100% !important;
     }
+  }
+  .label {
+    vertical-align: middle;
   }
 }
 
