--- a/src/Diamante/FrontBundle/Resources/assets/less/shared.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/shared.less
@@ -160,7 +160,7 @@ h1, .h1 {
 
 .modal-alert {
   .modal-dialog {
-    width:320px;
+    width:auto;
   }
   .modal-content {
     text-align: center;
