--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Session/templates/reset.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Session/templates/reset.ejs
@@ -9,7 +9,7 @@
     <input type="password" class="form-control input-lg" id="password" name="password" placeholder="Enter New Password">
   </div>
   <p>Back to <a href="#login">Sign in</a></p>
-  <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Create New Password</button>
+  <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Set New Password</button>
 </form>
 <% } else { %>
 <form role="form">
