--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Attachment/templates/item.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Attachment/templates/item.ejs
@@ -12,5 +12,5 @@
     <li><button class="btn btn-link js-delete-attachment" title="Remove Attachment"><i class="fa
       fa-times"></i></button></li>
   </ul>
-  <a href="<%= base64 %>" title="Download: <%= filename %>"><%= filename %></a>
+  <a href="<%= base64 %>" title="Download: <%= filename %>" target="_blank "><%= filename %></a>
 <% } %>
