--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/conditions/automation-conditions-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/conditions/automation-conditions-template.ejs
@@ -2,6 +2,7 @@
 <% var conditions = config.conditions; %>
 <% var properties = typeof entity !== 'undefined' && config.entities['ticket'] && config.entities['ticket'].properties; %>
 <% var property = typeof property !== 'undefined' && property; %>
+<% var property_type = typeof property !== 'undefined' && properties[property] && properties[property].type; %>
 <% var type = typeof type !== 'undefined' && type; %>
 <% var value = typeof value !== 'undefined' && value; value = value ? value : ''; %>
 <div class="controls">
@@ -11,8 +12,9 @@
         <strong class="value"><%= properties[property].label %></strong>
         <strong class="value"><%= conditions[type] %></strong>
         <% if(property && properties[property]){ %>
-            <% if(properties[property].type == 'string'){ %>
+            <% if(property_type == 'string' || property_type == 'datetime' || property_type == 'virtual'){ %>
                 <strong class="value"><%= value %>"</strong>
+                <% if(property_type == 'datetime') { %> <span class="label">Hours</span> <% }%>
             <% } else if (properties[property].frontend_options){ %>
                 <strong class="value"><%= properties[property].frontend_options[value] %></strong>
             <% } %>
