--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-template.ejs
@@ -25,6 +25,6 @@
     <% } %>
     <% if(type == 'notify_by_email'){ %>
         <span class="label">To: </span>
-        <input type="text" name="actions[value]" data-attr="value" value="<%= value %>" />
+        <strong class="value"><%= value %></strong>
     <% } %>
 </div>
