--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-edit-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-edit-template.ejs
@@ -26,12 +26,12 @@
             <% if(properties[property].type == 'string' || properties[property].type == 'datetime'){ %>
             <div class="control-item">
                 <input type="text"
-                       name="actions[value]" data-attr="value" value="<%= value %>"
+                       name="actions[value][<%= index %>]" data-attr="value" value="<%= value %>"
                        data-validation="{&quot;NotNull&quot;:{&quot;message&quot;:&quot;This is a required field&quot;,&quot;payload&quot;:null}}"
                        required="required"/>
             </div>
             <% } else if (properties[property].frontend_options){ %>
-            <select name="actions[value]" data-attr="value">
+            <select name="actions[value][<%= index %>]" data-attr="value">
                 <% for(var key in properties[property].frontend_options) { %>
                 <option value="<%= key %>"<%= key == value ? ' selected' : ''%>>
                     <%= properties[property].frontend_options[key] %>
