--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/conditions/automation-conditions-edit-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/conditions/automation-conditions-edit-template.ejs
@@ -32,13 +32,13 @@
             <% if(property_type == 'string' || property_type == 'datetime' || property_type == 'virtual'){ %>
             <div class="control-item">
                 <input type="text"
-                       name="conditions[value]" data-attr="value" value="<%= value %>"
+                       name="conditions[value][<%= index %>]" data-attr="value" value="<%= value %>"
                        data-validation="{&quot;NotNull&quot;:{&quot;message&quot;:&quot;This is a required field&quot;,&quot;payload&quot;:null}}"
                        required="required"/>
             </div>
             <% if(property_type == 'datetime') { %> <span class="label">Hours</span> <% }%>
             <% } else if (properties[property].frontend_options){ %>
-            <select name="conditions[value]" data-attr="value">
+            <select name="conditions[value][<%= index %>]" data-attr="value">
                 <% for(var key in properties[property].frontend_options) { %>
                 <option value="<%= key %>"<%= key == value ? ' selected' : ''%>>
                     <%= properties[property].frontend_options[key] %>
