--- a/src/Diamante/AutomationBundle/Resources/views/Automation/create.html.twig
+++ b/src/Diamante/AutomationBundle/Resources/views/Automation/create.html.twig
@@ -1,5 +1,9 @@
 {% extends 'DiamanteAutomationBundle:Automation:edit.html.twig' %}
 
+{% set createAction = 'diamante_' ~ type ~ '_create' %}
+{% set updateAction = 'diamante_' ~ type ~ '_update' %}
+{% set formAction = path(createAction, {'type': type}) %}
+
 {% block content_data %}
     {{ parent() }}
 {% endblock content_data %}
