--- a/src/Diamante/AutomationBundle/Resources/views/Automation/list.html.twig
+++ b/src/Diamante/AutomationBundle/Resources/views/Automation/list.html.twig
@@ -8,7 +8,7 @@
     {% if resource_granted('CREATE', 'Entity:DiamanteAutomationBundle:' ~ type|capitalize ~ 'Rule') %}
         {{
         UI.addButton({
-            'path' : path('diamante_automation_create', {'type': type}),
+            'path' : path('diamante_' ~ type ~ '_create', {'type': type}),
             'title' : 'diamante.automation.ui.create'|trans,
             'label' : 'diamante.automation.ui.create'|trans
         })
