--- a/src/Diamante/AutomationBundle/Resources/views/Automation/view.html.twig
+++ b/src/Diamante/AutomationBundle/Resources/views/Automation/view.html.twig
@@ -1,11 +1,13 @@
 {% extends 'OroUIBundle:actions:view.html.twig' %}
 {% import 'OroUIBundle::macros.html.twig' as UI %}
 
+{% oro_title_set({params : {"%rule.name%": entity.name }}) %}
+
 {% block navButtons %}
     {% set ruleType = app.request.get('type') %}
     {% if resource_granted('CREATE', 'Entity:DiamanteDeskBundle:Ticket') %}
         {{ UI.button({
-            'path': path('diamante_automation_create', {'type': ruleType}),
+            'path': path('diamante_' ~ type ~ '_create', {'type': ruleType}),
             'iCss': 'icon-plus',
             'title': 'Create rule'|trans,
             'label': 'Create rule'|trans
@@ -14,7 +16,7 @@
 
     {% if resource_granted('EDIT', entity) %}
         {{ UI.button({
-            'path': path('diamante_automation_update', {'type': ruleType, 'id': entity.id}),
+            'path': path('diamante_' ~ type ~ '_update', {'type': ruleType, 'id': entity.id}),
             'iCss': 'icon-edit',
             'title': 'Edit Rule'|trans,
             'label': 'Edit'|trans
@@ -23,8 +25,8 @@
 
     {% if resource_granted('DELETE', entity) %}
         {{ UI.deleteButton({
-            'dataUrl': path('diamante_automation_delete', {'type': ruleType, 'id': entity.id}),
-            'dataRedirect': path('diamante_automation_list', {'type': ruleType}),
+            'dataUrl': path('diamante_' ~ type ~ '_delete', {'type': ruleType, 'id': entity.id}),
+            'dataRedirect': path('diamante_' ~ type ~ '_list', {'type': ruleType}),
             'aCss': 'no-hash remove-button',
             'dataId': entity.id,
             'id': 'btn-remove-account',
@@ -40,7 +42,7 @@
 {% block pageHeader %}
     {% set breadcrumbs = {
             'entity': entity,
-            'indexPath': path('diamante_automation_list', {'type': type}),
+            'indexPath': path('diamante_' ~ type ~ '_list', {'type': type}),
             'indexLabel': 'diamante.automation.rule.entity_plural_label'|trans,
             'entityTitle': entity.name|default('N/A'),
             'hasAvatar':   true,
