DIAM-1562 save button dropdown

--- a/src/Diamante/AutomationBundle/Resources/views/Automation/edit.html.twig
+++ b/src/Diamante/AutomationBundle/Resources/views/Automation/edit.html.twig
@@ -5,8 +5,9 @@
 {% block navButtons %}
     {% set cancel_url = path(listAction, {'type': type}) %}
     {{ UI.button({'path' : cancel_url, 'title' : 'diamante.automation.ui.cancel'|trans, 'label' : 'diamante.automation.ui.cancel'|trans}) }}
-    {{ UI.saveAndStayButton() }}
-    {{ UI.saveAndCloseButton() }}
+    {% set html = UI.saveAndCloseButton() %}
+    {% set html = html ~ UI.saveAndStayButton() %}
+    {{ UI.dropdownSaveButton({'html': html}) }}
 {% endblock %}
 
 {% block pageHeader %}
