--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/conditions/automation-conditions-edit-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/conditions/automation-conditions-edit-template.ejs
@@ -1,52 +1,56 @@
 <% 'TEMPLATE: automation-conditions-edit-template' %>
 <% var entities = config.entities; %>
 <% var conditions = config.conditions; %>
+<% var entity_conditions = typeof entity !== 'undefined' && config.entities[entity] && config.entities[entity].conditions; %>
 <% var properties = typeof entity !== 'undefined' && config.entities[entity] && config.entities[entity].properties; %>
 <% var property = typeof property !== 'undefined' && property; %>
 <% var custom_conditions = typeof property !== 'undefined' && properties[property] && properties[property].conditions; %>
 <% var property_type = typeof property !== 'undefined' && properties[property] && properties[property].type; %>
+<% var entity_type = typeof entity_type !== 'undefined' && entity_type; %>
 <% var type = typeof type !== 'undefined' && type; %>
 <% var value = typeof value !== 'undefined' && value; value = value ? value : ''; %>
 <div class="controls">
     <span class="label">If</span>
     <label for="automation-target" class="value"><%= entities[entity].label %></label>
-    <% if(properties){ %>
-        <span class="label">Property</span>
-        <select name="conditions[property]" data-attr="property" data-rel-attr="value">
-            <% for(var key in properties) { %>
-            <option value="<%= key %>"<%= key == property ? ' selected' : ''%>><%= properties[key].label %></option>
-            <% } %>
-        </select>
-        <select name="conditions[type]" data-attr="type">
-            <% if(custom_conditions){ %>
-                <% _.each(custom_conditions, function(key){ %>
-                    <option value="<%= key %>"<%= key == type ? ' selected' : ''%>><%= conditions[key] %></option>
-                <% }); %>
-            <% } else { %>
-                <% for(var key in conditions) { %>
-                <option value="<%= key %>"<%= key == type ? ' selected' : ''%>><%= conditions[key] %></option>
-                <% } %>
-            <% } %>
-        </select>
-        <% if(property && properties[property]){ %>
-            <% if(property_type == 'string' || property_type == 'datetime' || property_type == 'virtual'){ %>
-            <div class="control-item">
-                <input type="text"
-                       name="conditions[value][<%= index %>]" data-attr="value" value="<%= value %>"
-                       data-validation="{&quot;NotNull&quot;:{&quot;message&quot;:&quot;This is a required field&quot;,&quot;payload&quot;:null}}"
-                       required="required"/>
-            </div>
-            <% if(property_type == 'datetime') { %> <span class="label">Hours</span> <% }%>
-            <% } else if (properties[property].frontend_options){ %>
-            <select name="conditions[value][<%= index %>]" data-attr="value">
-                <% for(var key in properties[property].frontend_options) { %>
-                <option value="<%= key %>"<%= key == value ? ' selected' : ''%>>
-                    <%= properties[property].frontend_options[key] %>
-                </option>
+    <select name="conditions[entity_type]" data-attr="entity_type">
+        <option value="">Property Updated</option>
+        <% if(entity_conditions){ %>
+            <% _.each(entity_conditions, function(key){ %>
+            <option value="<%= key %>"<%= key == entity_type ? ' selected' : ''%>><%= conditions[key] %></option>
+            <% }); %>
+        <% } %>
+    </select>
+    <% if(!entity_type){ %>
+        <% if(properties) {%>
+            <span class="label">Property</span>
+            <select name="conditions[property]" data-attr="property" data-rel-attr="value">
+                <% for(var key in properties) { %>
+                <option value="<%= key %>"<%= key == property ? ' selected' : ''%>><%= properties[key].label %></option>
                 <% } %>
             </select>
+            <% if(property && properties[property]){ %>
+                <% if(property_type == 'string' || property_type == 'datetime' || property_type == 'virtual'){ %>
+                <div class="control-item">
+                    <input type="text"
+                           name="conditions[value][<%= index %>]" data-attr="value" value="<%= value %>"
+                           data-validation="{&quot;NotNull&quot;:{&quot;message&quot;:&quot;This is a required field&quot;,&quot;payload&quot;:null}}"
+                           required="required"/>
+                </div>
+                <% if(property_type == 'datetime') { %> <span class="label">Hours</span> <% }%>
+                <% } else if (properties[property].frontend_options){ %>
+                <select name="conditions[value][<%= index %>]" data-attr="value">
+                    <% for(var key in properties[property].frontend_options) { %>
+                    <option value="<%= key %>"<%= key == value ? ' selected' : ''%>>
+                        <%= properties[property].frontend_options[key] %>
+                    </option>
+                    <% } %>
+                </select>
+                <% } %>
             <% } %>
         <% } %>
+    <% } else { %>
+        <input type="hidden" name="conditions[property]" value="<%= entity_type %>" data-attr="property" data-rel-attr="value" />
+        <input type="hidden" name="conditions[value]" value="true" data-attr="value"/>
     <% } %>
     <div class="pull-right">
         <div class="btn-group">
