DIAM-1561 fix frequency

--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/automation-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/automation-template.ejs
@@ -1,11 +1,11 @@
 <% 'TEMPLATE: automation-template' %>
-<% if(timeInterval) { %>
+<% if(time_interval) { %>
 <div class="control-group">
     <div class="control-label wrap">
-        <label for="automation-timeInterval">Frequency</label>
+        <label for="automation-time_interval">Frequency</label>
     </div>
     <div class="controls">
-        <strong class="value"><%= config.time_intervals[timeInterval] %></strong>
+        <strong class="value"><%= config.time_intervals[time_interval] %></strong>
     </div>
 </div>
 <% } %>
