--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/automation-edit-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/automation-edit-template.ejs
@@ -15,12 +15,12 @@
 <% if(type == 'business') { %>
 <div class="control-group">
     <div class="control-label wrap">
-        <label for="automation-timeInterval" class="required">Frequency<em>*</em></label>
+        <label for="automation-time_interval" class="required">Frequency<em>*</em></label>
     </div>
     <div class="controls">
-        <select name="timeInterval"  data-attr="timeInterval" id="automation-timeInterval">
+        <select name="time_interval"  data-attr="time_interval" id="automation-time_interval">
         <% for(var key in time_intervals) { %>
-        <option value="<%= key %>"<%= key == timeInterval ? ' selected' : ''%>><%= config.time_intervals[key] %></option>
+        <option value="<%= key %>"<%= key == time_interval ? ' selected' : ''%>><%= config.time_intervals[key] %></option>
         <% } %>
         </select>
     </div>
