--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/groupings/automation-groupings-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/groupings/automation-groupings-template.ejs
@@ -3,11 +3,7 @@
     <label for="automation-conditions-entity">Conditions</label>
 </div>
 <% } %>
-<select name="groupings[connector]" class="groupings-connector" data-attr="connector">
-    <% for(var key in config.connectors) { %>
-    <option value="<%= key %>"><%= config.connectors[key] %></option>
-    <% } %>
-</select>
+<strong class="value"><%= config.connectors[connector]%></strong>
 <div class="grouping-list">
 
 </div>
