--- a/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-template.ejs
+++ b/src/Diamante/AutomationBundle/Resources/public/js/app/templates/actions/automation-actions-template.ejs
@@ -23,7 +23,7 @@
             <% } %>
         <% } %>
     <% } %>
-    <% if(type == 'notify_by_email'){ %>
+    <% if(type == 'notify_by_email' || type == 'move_to_branch'){ %>
         <span class="label">To: </span>
         <strong class="value"><%= value %></strong>
     <% } %>
