--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/User/templates/user.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/User/templates/user.ejs
@@ -1,7 +1,7 @@
 <div class="user-wrapper">
   <ul class="user-actions">
     <li class="user-action">
-      <a href="#edit-user" class="user-edit js-edit-user">
+      <a href="#user/edit" class="user-edit js-edit-user">
         <img src="<%=avatar_url %>?s=40&d=identicon"
              class="user-image"
              onerror="this.className += ' offline'"
